MB-68799: Fix links in Query REST API specs
  - Add alternative links for Configure Queries page
  - Add alternative links for Manage and Monitor Queries
  - Remove links that won't work in Data API passthrough

Change-Id: I15d74116f7db81a2ca54c46283120307034d43c7
Reviewed-on: https://review.couchbase.org/c/query/+/234667
Well-Formed: Restriction Checker
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Tested-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>

--- a/docs/spec/admin/admin.yaml
+++ b/docs/spec/admin/admin.yaml
@@ -666,7 +666,7 @@ components:
 
           [client_context_id]: ../n1ql-rest-query/index.html#client_context_id
         x-desc-refs: |-
-          [client_context_id]: #client_context_id
+          [client_context_id]: query-settings.html#client_context_id
       elapsedTime:
         type: string
         format: duration
@@ -1335,6 +1335,8 @@ components:
           Refer to [Auto-Prepare][auto-prepare] for more information.
 
           [auto-prepare]: ../n1ql/n1ql-language-reference/prepare.html#auto-prepare
+        x-desc-refs: |-
+          [auto-prepare]: ../n1ql-language-reference/prepare.html#auto-prepare
       cleanupclientattempts:
         type: boolean
         default: true
@@ -1411,6 +1413,8 @@ components:
           Refer to [Configure Completed Requests][sys-completed-config] for more information and examples.
 
           [sys-completed-config]: ../n1ql/n1ql-manage/monitoring-n1ql-query.html#sys-completed-config
+        x-desc-refs: |-
+          [sys-completed-config]: monitoring-n1ql-query.html#sys-completed-config
         properties:
           aborted:
             type: boolean
@@ -1461,6 +1465,8 @@ components:
               Refer to [Configure Completed Requests][sys-completed-config] for more information.
 
               [sys-completed-config]: ../n1ql/n1ql-manage/monitoring-n1ql-query.html#sys-completed-config
+            x-desc-refs: |-
+              [sys-completed-config]: monitoring-n1ql-query.html#sys-completed-config
           threshold:
             type: integer
             format: int32
@@ -1514,6 +1520,7 @@ components:
 
           [queryCompletedLimit]: ../n1ql-rest-settings/index.html#queryCompletedLimit
         x-desc-refs: |-
+          [sys-completed-config]: monitoring-n1ql-query.html#sys-completed-config
           [queryCompletedLimit]: #queryCompletedLimit
       completed-max-plan-size:
         type: integer
@@ -1539,6 +1546,7 @@ components:
 
           [queryCompletedMaxPlanSize]: ../n1ql-rest-settings/index.html#queryCompletedMaxPlanSize
         x-desc-refs: |-
+          [sys-completed-config]: monitoring-n1ql-query.html#sys-completed-config
           [queryCompletedMaxPlanSize]: #queryCompletedMaxPlanSize
       completed-stream-size:
         type: integer
@@ -1559,6 +1567,8 @@ components:
           Refer to [Stream Completed Requests][sys-history] for more information and examples.
 
           [sys-history]: ../n1ql/n1ql-manage/monitoring-n1ql-query.html#sys-history
+        x-desc-refs: |-
+          [sys-history]: monitoring-n1ql-query.html#sys-history
       completed-threshold:
         type: integer
         format: int32
@@ -1583,6 +1593,7 @@ components:
 
           [queryCompletedThreshold]: ../n1ql-rest-settings/index.html#queryCompletedThreshold
         x-desc-refs: |-
+          [sys-completed-config]: monitoring-n1ql-query.html#sys-completed-config
           [queryCompletedThreshold]: #queryCompletedThreshold
       controls:
         type: boolean
@@ -1735,6 +1746,7 @@ components:
           [queryMaxParallelism]: ../n1ql-rest-settings/index.html#queryMaxParallelism
           [max_parallelism_req]: ../n1ql-rest-query/index.html#max_parallelism_req
         x-desc-refs: |-
+          [max-parallelism]: ../n1ql-language-reference/index-partitioning.html#max-parallelism
           [queryMaxParallelism]: #queryMaxParallelism
           [max_parallelism_req]: #max_parallelism_req
       memory-quota:
@@ -2014,6 +2026,7 @@ components:
 
           [profile_req]: ../n1ql-rest-query/index.html#profile_req
         x-desc-refs: |-
+          [monitor-profile-details]: monitoring-n1ql-query.html#monitor-profile-details
           [profile_req]: #profile_req
       request-size-cap:
         type: integer
