MB-69528: Fix external examples for Query REST API
  - Replace `value.$ref` → `externalValue`
  - Replace .jsonc → .json
  - Add all example files that cb-swagger expects

Also includes fixes for the following issues:

    MB-69531: Query Settings REST API uses any node
    DOC-13329: Clearer descriptions for timeout
    DOC-8634: numatrs should not be a request level parameter

Change-Id: I4555c62e0d52a053cdf4d41432a2f26e298322f4
Reviewed-on: https://review.couchbase.org/c/query/+/237906
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Well-Formed: Restriction Checker
Tested-by: Simon Dew <Simon.Dew@couchbase.com>

--- a/docs/spec/admin/admin.yaml
+++ b/docs/spec/admin/admin.yaml
@@ -424,7 +424,7 @@ paths:
               schema:
                 type: object
               example:
-                {}
+                $ref: 'examples/get_ping.json'
 
   /admin/gc:
     get:
@@ -563,6 +563,8 @@ paths:
               schema:
                 type: string
                 format: text/html
+              example:
+                $ref: 'examples/get_debug_vars.html'
 
   /admin/settings:
     get:
@@ -1418,6 +1420,7 @@ components:
         properties:
           aborted:
             type: boolean
+            nullable: true
             default: null
             example: true
             x-has-default: true
@@ -1446,6 +1449,7 @@ components:
           error:
             type: integer
             format: int32
+            nullable: true
             default: null
             example: 12003
             x-has-default: true
@@ -1900,14 +1904,9 @@ components:
           The [cluster-level][queryNumAtrs] `queryNumAtrs` setting specifies this property for the whole cluster.
           When you change the cluster-level setting, the node-level setting is over-written for all nodes in the cluster.
 
-          In addition, the [request-level][numatrs_req] `numatrs` parameter specifies this property per request.
-          The minimum of that and the node-level `numatrs` setting is applied.
-
           [queryNumAtrs]: ../n1ql-rest-settings/index.html#queryNumAtrs
-          [numatrs_req]: ../n1ql-rest-query/index.html#numatrs_req
         x-desc-refs: |-
           [queryNumAtrs]: #queryNumAtrs
-          [numatrs_req]: #numatrs_req
       pipeline-batch:
         type: integer
         format: int32
