MB-62186: Add gocbcrypto dependency
- Modify go.mod

- Modify the build.sh script:

    * This script is used to build the query engine independently
    without building the rest of the server.

    * In standalone mode, the script checks if that version's openssl dev
      pack is in the source tree. The dev pack should be in either
      /devbld/openssl-<openssl-version>
      or
      $GOPATH/src/couchbasedeps/openssl/openssl-<openssl-version>

    * If it is not, the dev pack is downloaded in devbld if devbld is
      present or in $GOPATH/src/couchbasedeps/openssl.

      And the headers are generated

    * This is because, gocbcrypto requires the header files from the
    openSSL source.

Change-Id: If769e0f5d6158d015e47bc7d7428a2be1066d34b
Reviewed-on: https://review.couchbase.org/c/query/+/239371
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Tested-by: Dhanya Gowrish <dhanya.gowrish@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ PROJECT (query NONE)
 # CBQ_ONLY to enable only that target.
 
 INCLUDE (FindCouchbaseGo)
+INCLUDE (FindCouchbaseOpenSSL)
 
 IF (BUILD_ENTERPRISE)
     SET (_gotags "enterprise")
@@ -51,6 +52,10 @@ SET(CGO_LIBRARY_DIRS)
 
 IF (NOT CBQ_ONLY)
   GoYacc (TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
+
+  GET_FILENAME_COMPONENT (OPENSSL_LIB_DIR "${OPENSSL_CRYPTO_LIBRARY}" DIRECTORY)
+  LIST(APPEND CGO_INCLUDE_DIRS "${OPENSSL_INCLUDE_DIR}")
+  LIST(APPEND CGO_LIBRARY_DIRS "${OPENSSL_LIB_DIR}")
 
   IF (BUILD_ENTERPRISE)
     find_path(NEWEVAL_INCLUDE_DIR worker.h
