DOC-13706: Query REST API spec update natural_cred
- Add note on SSO, MFA, and social login

Change-Id: Id24e2ab861d7569e980654655d1dc54fa102a0c9
Reviewed-on: https://review.couchbase.org/c/query/+/240169
Reviewed-by: Gaurav J <gaurav.jayaraj@couchbase.com>
Tested-by: Riju <riju.de@couchbase.com>
Well-Formed: Restriction Checker
Reviewed-by: Riju <riju.de@couchbase.com>

--- a/docs/spec/service/service.yaml
+++ b/docs/spec/service/service.yaml
@@ -523,6 +523,8 @@ components:
           The Couchbase Capella user account credentials for a natural language request, in the form `username:password`.
           Be careful not to expose the credentials in log files or other output.
 
+          This parameter does not support single sign-on (SSO), multi-factor authentication (MFA), or social login credentials such as Google or GitHub.
+
           Natural language requests use the Couchbase Capella iQ service as a backend.
           To make a natural language request, you must have a Couchbase Capella user account.
 
